--- a/INE/src/Interfaces/Login.form
+++ b/INE/src/Interfaces/Login.form
@@ -50,6 +50,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Yu Gothic UI" size="18" style="0"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="Mendez26"/>
           </Properties>
           <Events>
             <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tf_campoUsuarioKeyReleased"/>
@@ -65,6 +66,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Consolas" size="18" style="0"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="123"/>
           </Properties>
           <Events>
             <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tf_campoContrase&#xf1;aKeyReleased"/>
